--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <ul class="menu__list">
                     <li>
                         <a href="#" class="menu__nav_inner menu_active" data-i18n="buy">buy</a>
-                        <img class="menu__nav_inner-pic"></img>
+                        <!-- <img class="menu__nav_inner-pic"></img> -->
                         <img src="./images/Rectangle 889.png" alt="rectangle" class="menu__nav_inner-pic">
                         <ul class="sub__menu_list">
                           <li>
@@ -79,11 +79,12 @@
                     <li><a href="services.html" class="menu__nav_inner" data-i18n="services">services</a></li>
                 </ul>
                 <ul class="menu__list">
-                    <li><a href="#" class="menu__nav_inner" data-i18n="about">about</a></li>
+                    <li><a href="about.html" class="menu__nav_inner" data-i18n="about">about</a></li>
                 </ul>
                 <ul class="menu__list">
-                    <li><a href="#" class="menu__nav_inner" data-i18n="contact">contact</a></li>
+                    <li><a href="contact.html" class="menu__nav_inner" data-i18n="contact">contact</a></li>
                 </ul>
+                <span class="nav-indicator"></span>
             </nav>
             <div class="header__inner">
                 <div class="header__inner_botton">
@@ -952,6 +953,6 @@
 
 
   <script src="JS/slick.min.js"></script>
-  <script src="app.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
