--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
                     <li><a href="services.html" class="menu__nav_inner" data-i18n="services">services</a></li>
                 </ul>
                 <ul class="menu__list">
-                    <li><a href="about.html" class="menu__nav_inner" data-i18n="about">about</a></li>
+                    <li><a href="blog.html" class="menu__nav_inner" data-i18n="blog">blog</a></li>
                 </ul>
                 <ul class="menu__list">
                     <li><a href="contact.html" class="menu__nav_inner" data-i18n="contact">contact</a></li>
